--- a/Example/FPPermission/FPPermission-Info.plist
+++ b/Example/FPPermission/FPPermission-Info.plist
@@ -24,6 +24,24 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>访问多媒体</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>使用蓝牙</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>使用蓝牙</string>
+	<key>NSCameraUsageDescription</key>
+	<string>访问相机</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>使用定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用定位</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>访问麦克风</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>访问相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
